hphp/hack/test/typecheck/higher_kinded_types/tparam_name_reused_no_shadow.php
<?hh // strict

class Test< T1<TR>, T2<TR> > {}
